results/SpecGenBench/4-shot/log-RepeatedNumNested-2023_11_28_01_31_44.txt
public class RepeatedNumNested {
    //@ requires 0 <= arr.length;
    //@ ensures \result == -1 ==> (\forall int i, j; 0 <= i && i < arr.length && 0 <= j && j < arr.length && i != j; arr[i] != arr[j]);
    //@ ensures 0 <= \result && \result < arr.length ==> arr[\result] == arr[i] && (\forall int j; 0 <= j && j < \result; arr[j] != arr[i]);
    public static int repeatedNum(int[] arr) {
        for (int i = 0; i < arr.length; ++i) {
            for (int j = i + 1; j < arr.length; ++j) {
                if(arr[i] == arr[j])
                    return i;
            }
        }
        return -1;
    }
    
}
/home/max/Documents/JMLGPT/tmp/RepeatedNumNested.java:4: error: cannot find symbol
    //@ ensures 0 <= \result && \result < arr.length ==> arr[\result] == arr[i] && (\forall int j; 0 <= j && j < \result; arr[j] != arr[i]);
                                                                             ^
  symbol:   variable i
  location: class RepeatedNumNested
/home/max/Documents/JMLGPT/tmp/RepeatedNumNested.java:4: error: cannot find symbol
    //@ ensures 0 <= \result && \result < arr.length ==> arr[\result] == arr[i] && (\forall int j; 0 <= j && j < \result; arr[j] != arr[i]);
                                                                                                                                        ^
  symbol:   variable i
  location: class RepeatedNumNested
2 errors

